fix: исправлена отправка сообщений